--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link href="styles/sobre.css" rel="stylesheet">
-    <script src="javascript.js" defer></script>
+    <link href="styles/header_footer.css" rel="stylesheet">
     <title>WebLearning</title>
 </head>
 
@@ -21,8 +21,6 @@
                 <li><a href="index.html">News</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="forum.html">Fórum</a></li>
-                <li><a href="">Jobs</a></li>
-                <li><a href="">Ensine</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
             </ul>
 
@@ -34,7 +32,24 @@
         </nav>
     </header>
 
+    <div class="menu">
+        <nav>
+            <ul class="nav_barmn">
+                <li><a href="index.html">News</a></li>
+                <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="forum.html">Fórum</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+            </ul>
+
+            <ul class="nav_cadastromn">
+                <li><a href="entra_cadastrar.html#1">Cadastre-se</a></li>
+                <li><a href="entra_cadastrar.html#2">Entrar</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <Main>
+
         <div class="sobre">
 
             <h2>A WebLearning</h2>
