--- a/entra_cadastrar.html
+++ b/entra_cadastrar.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link href="styles/style_ec.css" rel="stylesheet">
+    <link href="styles/header_footer.css" rel="stylesheet">
     <script src="cadastrar.js" defer></script>
     <title>WebLearning</title>
 </head>
@@ -21,8 +22,6 @@
                 <li><a href="index.html">News</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="forum.html">Fórum</a></li>
-                <li><a href="">Jobs</a></li>
-                <li><a href="">Ensine</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
             </ul>
 
@@ -33,6 +32,22 @@
 
         </nav>
     </header>
+
+    <div class="menu">
+        <nav>
+            <ul class="nav_barmn">
+                <li><a href="index.html">News</a></li>
+                <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="forum.html">Fórum</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+            </ul>
+
+            <ul class="nav_cadastromn">
+                <li><a href="entra_cadastrar.html#1">Cadastre-se</a></li>
+                <li><a href="entra_cadastrar.html#2">Entrar</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <Main>
 
@@ -99,5 +114,3 @@
 </body>
 
 </html>
-
-function redirect(ind) { const teste; if (ind == 1) teste = window.location.href = "entra_cadastrar.html?type=1 "; else if (idx == 2) teste = window.location.href = "entra_cadastrar.html?type=2 "; console.log(teste); }
