--- a/forum.html
+++ b/forum.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/style_forum.css" rel="stylesheet">
     <link href="styles/header_footer.css" rel="stylesheet">
     <script src="javascript.js" defer></script>
